--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "primeicons": "^6.0.1",
     "primevue": "^3.35.0",
     "vue": "^3.3.4",
     "vue3-lottie": "^3.1.0"
@@ -28,6 +29,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
+    "sass": "^1.69.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
