--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "sass": "^1.69.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
+    "vue-eslint-parser": "^9.3.2",
     "vue-tsc": "^1.8.11"
   }
 }
