--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.35.0",
     "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
     "vue3-lottie": "^3.1.0"
   },
   "devDependencies": {
