--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.5.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.35.0",
+    "quill": "^1.3.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue3-lottie": "^3.1.0"
@@ -23,18 +24,21 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "sass": "^1.69.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
-    "vue-eslint-parser": "^9.3.2",
-    "vue-tsc": "^1.8.11"
+    "vue-eslint-parser": "^9.3.2"
   }
 }
