--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sass": "^1.69.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
-    "vue-eslint-parser": "^9.3.2"
+    "vue-eslint-parser": "^9.3.2",
+    "vue-tsc": "^1.8.19"
   }
 }
