--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primevue": "^3.35.0",
     "quill": "^1.3.7",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.5.0",
     "vue-router": "^4.2.5",
     "vue3-lottie": "^3.1.0"
   },
