--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.3.2",
     "@vueuse/core": "^10.5.0",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
