feat: lint fix + private route handler

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,9 +30,7 @@
       }
     ]
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "parser": "vue-eslint-parser",
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
